--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/highcharts": "^7.0.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "customize-cra": "^1.0.0",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
