--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,13 +14,15 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "customize-cra": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +47,10 @@
   "proxy": "http://localhost:8080",
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
-  }
+  },
+  "main": "config-overrides.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
