--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^22.0.2",
     "@types/node-cron": "^3.0.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -27,13 +28,14 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cookie-parser": "^1.4.7",
-    "@types/express-session": "^1.18.0",
     "axios": "^1.7.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.12.0",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3"
   }
 }
