--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -8,8 +8,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["node", "express-session"],
+    "typeRoots": ["./src/types", "./node_modules/@types"], 
+    "types": ["node", "express"],
     "baseUrl": "./src",
     "paths": {
       "@_config/*": ["config/*"],
@@ -20,13 +20,9 @@
       "@_services/*": ["services/*"],
       "@_types/*": ["types/*"],
       "@_utils/*": ["utils/*"],
-      "@controllers/*": ["controllers/*"],
-      "@routes/*": ["routes/*"],
-      "@services/*": ["services/*"],
-      "@models/*": ["models/*"],
-      "@utils/*": ["utils/*"]
+      "@_models/*": ["models/*"]
     }
   },
-  "include": ["src/**/*", "src/**/*.d.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
