--- a/back/package.json
+++ b/back/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.18.0",
     "google-auth-library": "^9.12.0",
     "jsonwebtoken": "^9.0.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "passport": "^0.7.0"
   }
 }
