refactor: 구글로그인 컴포넌트 경로 변경

--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@ramonak/react-progress-bar": "^5.2.0",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
