--- a/front/package.json
+++ b/front/package.json
@@ -25,8 +25,11 @@
     "react-cookie": "^7.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
