--- a/front/.gitignore
+++ b/front/.gitignore
@@ -82,6 +82,9 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.development
+.env.production
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
