--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/highcharts": "^7.0.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "customize-cra": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
