--- a/back/package.json
+++ b/back/package.json
@@ -34,6 +34,8 @@
     "@types/axios": "^0.14.0",
     "@types/cookie-parser": "^1.4.7",
     "axios": "^1.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express-session": "^1.18.0",
@@ -41,6 +43,9 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "reflect-metadata": "^0.2.2",
+    "winston": "^3.14.1",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
