--- a/back/package.json
+++ b/back/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.12",
     "express-session": "^1.18.0",
     "google-auth-library": "^9.12.0",
     "jsonwebtoken": "^9.0.2",
