--- a/front/package.json
+++ b/front/package.json
@@ -53,6 +53,7 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-app-rewired": "^2.2.1"
   },
   "main": "config-overrides.js",
